<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home_icon_foreground"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/nav_backup_icon_foreground"
            android:title="@string/backup" />
        <item
            android:id="@+id/nav_restore"
            android:icon="@drawable/nav_restore_icon_foreground"
            android:title="@string/restore" />
        <item
            android:id="@+id/nav_send_to_frnds"
            android:icon="@drawable/nav_share_to_frnds_icon_foreground"
            android:title="@string/send_to_friends" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/nav_contact_us_icon_foreground"
            android:title="@string/contact_us" />
    </group>


</menu>