<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".add_order">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:textColorHint="@color/BackGroundGrey"
            android:hint="@string/date" />

        <ImageButton
            android:id="@+id/dateBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_calendar_month_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/from"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:inputType="text"
            android:textColorHint="@color/BackGroundGrey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/fromBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_keyboard_double_arrow_right_24" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/product"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/Product"
            android:inputType="text"
            android:textColorHint="@color/BackGroundGrey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/productBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_production_quantity_limits_24" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/customer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/CustomerName"
            android:inputType="text"
            android:textColorHint="@color/BackGroundGrey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/customerBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_person_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/site"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/Site"
            android:inputType="text"
            android:textColorHint="@color/BackGroundGrey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/siteBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_keyboard_double_arrow_left_24" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/vehicle_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/Vehicle"
            android:inputType="text"
            android:textColorHint="@color/BackGroundGrey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/vehicleBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_time_to_leave_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/quantity"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColorHint="@color/BackGroundGrey"
            android:hint="@string/Quantity" />
        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@color/dropdown1"
            android:popupBackground="@color/dropdown1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/amount"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColorHint="@color/BackGroundGrey"
            android:hint="@string/Amount" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:background="@color/dropdown1"
            android:popupBackground="@color/dropdown1" />
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/curved_purple_button"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
