<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".add_payment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/date"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:textColorHint="@color/BackGroundGrey"
            android:hint="@string/date" />

        <ImageButton
            android:id="@+id/dateBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_calendar_month_24" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/customer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/CustomerName"
            android:inputType="text"
            android:textColorHint="@color/BackGroundGrey"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/customerBtn"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_person_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/amount"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textColorHint="@color/BackGroundGrey"
            android:hint="@string/Amount" />

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/curved_purple_button"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>